--- a/practice/style.css
+++ b/practice/style.css
@@ -24,7 +24,8 @@ button > i {
   transform: translate(-50%, -50%);
   background-color: #fff;
   width: 600px;
-  height: 500px;
+  /* page 공간 확보 */
+  height: 530px; 
   padding: 24px;
   overflow: hidden;
   display: flex;
@@ -71,6 +72,8 @@ h2 {
 
 .todos {
   margin-top: 106px;
+  /* page 공간 확보 */
+  margin-bottom: 25px;
   overflow: auto;
 }
 
@@ -136,4 +139,22 @@ h2 {
 
 .edit_buttons {
   display: none;
+}
+
+/* pagination */
+.pagination {
+  position: absolute;
+  left: 50%;
+  bottom: 25px;
+  transform: translateX(-50%);
+  display: flex;
+}
+
+.pagination button {
+  width: 50px;
+  height: 30px;
+  color: #555555;
+  margin: 0 2px;
+  font-weight: 700;
+  border-radius: 6px;
 }
